force-app/main/default/objects/SR_Metric__c/SR_Metric__c.object-meta.xml
<CustomObject>
    <label>SR Metric</label>
    <nameField>
        <label>SR Metric Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SR Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>