force-app/main/default/objects/SR_Metric__c/fields/ACCOUNT_OWNER__c.field-meta.xml
<CustomField>
    <fullName>ACCOUNT_OWNER__c</fullName>
    <label>ACCOUNT OWNER</label>
    <length>200</length>
    <type>Text</type>
</CustomField>