force-app/main/default/objects/SR_Metric__c/fields/ACCOUNT_TYPE__c.field-meta.xml
<CustomField>
    <fullName>ACCOUNT_TYPE__c</fullName>
    <label>ACCOUNT TYPE</label>
    <length>200</length>
    <type>Text</type>
</CustomField>