force-app/main/default/objects/SR_Metric__c/fields/ACCT_GROUP__c.field-meta.xml
<CustomField>
    <fullName>ACCT_GROUP__c</fullName>
    <label>ACCT GROUP</label>
    <length>100</length>
    <type>Text</type>
</CustomField>