force-app/main/default/objects/SR_Metric__c/fields/AREA__c.field-meta.xml
<CustomField>
    <fullName>AREA__c</fullName>
    <label>AREA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>