force-app/main/default/objects/SR_Metric__c/fields/Avg_Resol_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Avg_Resol_Hrs__c</fullName>
    <label>Avg Resol. Hrs.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>