force-app/main/default/objects/SR_Metric__c/fields/Contracted_Resolution_Limit__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Resolution_Limit__c</fullName>
    <label>Contracted Resolution Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>