force-app/main/default/objects/SR_Metric__c/fields/Contracted_Response_Limit__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Response_Limit__c</fullName>
    <label>Contracted Response Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>