force-app/main/default/objects/SR_Metric__c/fields/Customer_Account_Tier__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account_Tier__c</fullName>
    <label>Customer Account Tier</label>
    <length>30</length>
    <type>Text</type>
</CustomField>