force-app/main/default/objects/SR_Metric__c/fields/CUSTOMER_SUCCESS_MANAGER__c.field-meta.xml
<CustomField>
    <fullName>CUSTOMER_SUCCESS_MANAGER__c</fullName>
    <label>CUSTOMER SUCCESS MANAGER</label>
    <length>200</length>
    <type>Text</type>
</CustomField>