force-app/main/default/objects/SR_Metric__c/fields/Field_Owner_Qlid__c.field-meta.xml
<CustomField>
    <fullName>Field_Owner_Qlid__c</fullName>
    <label>Field Owner Qlid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>