force-app/main/default/objects/SR_Metric__c/fields/Fourteen_Day_Revisit_Flag__c.field-meta.xml
<CustomField>
    <fullName>Fourteen_Day_Revisit_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fourteen Day Revisit Flag</label>
    <type>Checkbox</type>
</CustomField>