force-app/main/default/objects/SR_Metric__c/fields/Global_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Global_Account_Name__c</fullName>
    <label>Global Account Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>