force-app/main/default/objects/SR_Metric__c/fields/Global_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Global_Customer_Number__c</fullName>
    <label>Global Customer Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>