force-app/main/default/objects/SR_Metric__c/fields/HHT_Flag__c.field-meta.xml
<CustomField>
    <fullName>HHT_Flag__c</fullName>
    <label>HHT Flag</label>
    <length>10</length>
    <type>Text</type>
</CustomField>