force-app/main/default/objects/SR_Metric__c/fields/HW_RQST_STATUS__c.field-meta.xml
<CustomField>
    <fullName>HW_RQST_STATUS__c</fullName>
    <label>HW RQST STATUS</label>
    <length>100</length>
    <type>Text</type>
</CustomField>