force-app/main/default/objects/SR_Metric__c/fields/INDUSTRY_CODE__c.field-meta.xml
<CustomField>
    <fullName>INDUSTRY_CODE__c</fullName>
    <label>INDUSTRY CODE</label>
    <length>100</length>
    <type>Text</type>
</CustomField>