force-app/main/default/objects/SR_Metric__c/fields/MANAGER_CUST_SUCCESS__c.field-meta.xml
<CustomField>
    <fullName>MANAGER_CUST_SUCCESS__c</fullName>
    <label>MANAGER CUST SUCCESS</label>
    <length>200</length>
    <type>Text</type>
</CustomField>