force-app/main/default/objects/SR_Metric__c/fields/Mitigated_Flag__c.field-meta.xml
<CustomField>
    <fullName>Mitigated_Flag__c</fullName>
    <label>Mitigated_Flag</label>
    <length>20</length>
    <type>Text</type>
</CustomField>