force-app/main/default/objects/SR_Metric__c/fields/Parts_Used__c.field-meta.xml
<CustomField>
    <fullName>Parts_Used__c</fullName>
    <label>Parts Used</label>
    <length>30</length>
    <type>Text</type>
</CustomField>