force-app/main/default/objects/SR_Metric__c/fields/PRODUCT_ID_DESC__c.field-meta.xml
<CustomField>
    <fullName>PRODUCT_ID_DESC__c</fullName>
    <label>PRODUCT ID DESC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>