force-app/main/default/objects/SR_Metric__c/fields/Remote_Activity_Only__c.field-meta.xml
<CustomField>
    <fullName>Remote_Activity_Only__c</fullName>
    <label>Remote Activity Only</label>
    <length>30</length>
    <type>Text</type>
</CustomField>