force-app/main/default/objects/SR_Metric__c/fields/Resolve_SLA_Met_Percent__c.field-meta.xml
<CustomField>
    <fullName>Resolve_SLA_Met_Percent__c</fullName>
    <label>Resolve SLA Met Percent</label>
    <length>10</length>
    <type>Text</type>
</CustomField>