force-app/main/default/objects/SR_Metric__c/fields/Response_SLA_Met_Percent__c.field-meta.xml
<CustomField>
    <fullName>Response_SLA_Met_Percent__c</fullName>
    <label>Response SLA Met Percent</label>
    <length>10</length>
    <type>Text</type>
</CustomField>