force-app/main/default/objects/SR_Metric__c/fields/SERVICE_LEVEL__c.field-meta.xml
<CustomField>
    <fullName>SERVICE_LEVEL__c</fullName>
    <label>SERVICE LEVEL</label>
    <length>200</length>
    <type>Text</type>
</CustomField>