force-app/main/default/objects/SR_Metric__c/fields/Service_Tag__c.field-meta.xml
<CustomField>
    <fullName>Service_Tag__c</fullName>
    <label>Service Tag</label>
    <length>200</length>
    <type>Text</type>
</CustomField>