force-app/main/default/objects/SR_Metric__c/fields/Site_Address_Line__c.field-meta.xml
<CustomField>
    <fullName>Site_Address_Line__c</fullName>
    <label>Site Address Line</label>
    <length>200</length>
    <type>Text</type>
</CustomField>