force-app/main/default/objects/SR_Metric__c/fields/SITE_NAME__c.field-meta.xml
<CustomField>
    <fullName>SITE_NAME__c</fullName>
    <label>SITE NAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>