force-app/main/default/objects/SR_Metric__c/fields/SR_Status__c.field-meta.xml
<CustomField>
    <fullName>SR_Status__c</fullName>
    <label>SR Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>