force-app/main/default/objects/SR_Metric__c/fields/SUB_ACCOUNT_TYPE__c.field-meta.xml
<CustomField>
    <fullName>SUB_ACCOUNT_TYPE__c</fullName>
    <label>SUB ACCOUNT TYPE</label>
    <length>200</length>
    <type>Text</type>
</CustomField>