force-app/main/default/objects/SR_Metric__c/fields/Three_Day_Revisit_Flag__c.field-meta.xml
<CustomField>
    <fullName>Three_Day_Revisit_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Three Day Revisit Flag</label>
    <type>Checkbox</type>
</CustomField>